force-app/main/default/objects/Welfare_Domain_Summary__c/Welfare_Domain_Summary__c.object-meta.xml
<CustomObject>
    <description
  >Historical per-domain summary captured as part of a welfare assessment.</description>
    <label>Welfare Domain Summary</label>
    <nameField>
        <label>Welfare Domain Summary Number</label>
        <displayFormat>WDS-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welfare Domain Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>