force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <description
  >Flags that the domain summary identified required action.</description>
    <label>Action Required</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>