force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Action_Summary__c.field-meta.xml
<CustomField>
    <fullName>Action_Summary__c</fullName>
    <description>Summary of the action required for the domain.</description>
    <label>Action Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>