force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Assessment_Domain_Key__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Domain_Key__c</fullName>
    <description
  >System-maintained unique key that ensures one domain summary per domain per assessment.</description>
    <label>Assessment Domain Key</label>
    <length>160</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>