force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description>Domain represented by the summary row.</description>
    <label>Domain Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Domain_Code</valueSetName>
    </valueSet>
</CustomField>