force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Inferred_Affects__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Affects__c</fullName>
    <description>Narrative inferred affects for the domain.</description>
    <label>Inferred Affects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>