force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Key_Findings__c.field-meta.xml
<CustomField>
    <fullName>Key_Findings__c</fullName>
    <description>Summary of the main findings for the domain.</description>
    <label>Key Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>