force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Negative_Grade__c.field-meta.xml
<CustomField>
    <fullName>Negative_Grade__c</fullName>
    <description>Negative grade for the domain.</description>
    <label>Negative Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Negative_Grade</valueSetName>
    </valueSet>
</CustomField>