force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Positive_Grade__c.field-meta.xml
<CustomField>
    <fullName>Positive_Grade__c</fullName>
    <description>Positive grade for the domain.</description>
    <label>Positive Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Positive_Grade</valueSetName>
    </valueSet>
</CustomField>