force-app/main/default/objects/Welfare_Domain_Summary__c/fields/Welfare_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Welfare_Assessment__c</fullName>
    <description>Assessment that owns the domain summary.</description>
    <label>Welfare Assessment</label>
    <referenceTo>Welfare_Assessment__c</referenceTo>
    <relationshipLabel>Domain Summaries</relationshipLabel>
    <relationshipName>Domain_Summaries</relationshipName>
    <type>MasterDetail</type>
</CustomField>